nesc-frontend/src/test/resources/integration/programs/good/good12/C.nc
/* Correct usage of a type with @integer() attribute. */

configuration C
{
}
implementation
{
   components new M(long long int);
}
