nesc-frontend/src/test/resources/integration/programs/bad/bad14/C.nc
/* Invalid usage of a value of a type with @number() attribute. */

configuration C
{
}
implementation
{
   components new M(double);
}
